# better-debate-tuari

./: .gitignore  Cargo.toml  package.json  release.sh  skills-lock.json
.codex/environments/: environment.toml
.github/workflows/: tex-release.yml
apps/blockvault/: package.json
apps/blockvault/src-tauri/: Cargo.toml  tauri.conf.json
apps/blockvault/src-tauri/capabilities/: default.json
apps/blockvault/src-tauri/src/: lib.rs  main.rs
apps/tex/: package.json
apps/tex/src-tauri/: Cargo.toml  tauri.conf.json
apps/tex/src-tauri/capabilities/: default.json
apps/tex/src-tauri/src/: lib.rs  main.rs
crates/better-debate-core/: Cargo.toml
crates/better-debate-core/src/: commands.rs  docx_capture.rs  lexical.rs  lib.rs  search_engine.rs  tex_commands.rs  types.rs  vector.rs
crates/better-debate-core/src/tex_doc/: mod.rs  read.rs  write.rs
crates/better-debate-tauri-host/: Cargo.toml
crates/better-debate-tauri-host/src/: lib.rs  tex_sessions.rs
crates/docx/: Cargo.toml
crates/docx/src/: lib.rs
crates/search-core/: Cargo.toml  README.md
crates/search-core/src/: commands.rs  db.rs  docx_capture.rs  docx_parse.rs  indexer.rs  lib.rs  query_engine.rs  search.rs  search_engine.rs  semantic.rs  types.rs  util.rs
crates/search-tauri-host/: Cargo.toml
crates/search-tauri-host/src/: lib.rs
crates/tex-core/: Cargo.toml
crates/tex-core/src/: lib.rs
crates/tex-core/src/tex_doc/: read.rs  write.rs
crates/tex-tauri-host/: Cargo.toml
crates/tex-tauri-host/src/: lib.rs  tex_sessions.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
