[package]
name = "blockvault"
version = "0.1.0"
description = "BlockVault Tauri app"
authors = ["ani"]
edition = "2021"

[lib]
name = "blockvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
better-debate-tauri-host = { path = "../../../crates/better-debate-tauri-host" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

