[package]
name = "tex"
version = "0.1.0"
description = "Tex Tauri app"
authors = ["ani"]
edition = "2021"

[lib]
name = "tex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
better-debate-tauri-host = { path = "../../../crates/better-debate-tauri-host" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
