[package]
name = "tex"
version = "0.0.1"
description = "Tex Tauri app"
authors = ["ani"]
edition = "2021"

[lib]
name = "tex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tex-tauri-host = { path = "../../../crates/tex-tauri-host" }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
